--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     package="com.gmdigital.platzigram">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-feature android:name="android.hardware.camera2"
+        android:required="false"/>
 
     <application
         android:allowBackup="true"
@@ -30,12 +33,14 @@
             android:label="@string/title_activity_reference"
             android:theme="@style/AppTheme" />
         <activity android:name=".view.ContainerActivity" />
-        <activity android:name=".view.PictureDetailActivity"
+        <activity
+            android:name=".view.PictureDetailActivity"
             android:parentActivityName=".view.ContainerActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".login.view.LoginActivity" />
         </activity>
+        <activity android:name=".post.view.NewPostActivity"></activity>
     </application>
 
 </manifest>
