--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,12 +8,16 @@
         android:required="false"/>
 
     <application
+        android:name=".PlatzigramApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <meta-data android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id"/>
+
         <activity android:name=".login.view.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,16 +26,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".view.CreateAccountActivity"
+            android:name=".login.view.CreateAccountActivity"
             android:parentActivityName=".login.view.LoginActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".login.view.LoginActivity" />
         </activity>
-        <activity
-            android:name=".ReferenceActivity"
-            android:label="@string/title_activity_reference"
-            android:theme="@style/AppTheme" />
         <activity android:name=".view.ContainerActivity" />
         <activity
             android:name=".view.PictureDetailActivity"
